feat(TheBarberHub-2/Sprints#35): Añadir Horarios Peluquerias